hphp/hack/test/decl/unnamed_variadic_method_parameter.php.typecheck.exp
File "unnamed_variadic_method_parameter.php", line 4, characters 19-19:
Variadic function arguments require a name and type in strict mode, e.g. `int ...$args`. (Typing[4223])
